# Jankendra-AI

./: .firebaserc  .gitignore  README.html  README.md  firebase.json  package-lock.json  package.json  pyproject.toml
ai_modules/: .env.example  (+1 more)
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  001_initial_phase1_schema.py  002_auth_phone_otp.py  003_complaint_fields.py  004_ward_geo.py  005_ward_city.py  006_complaint_update_fields.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  commitments.py  complaints.py  constituency.py  dashboard.py  digest.py  health.py  priorities.py  router.py  voice.py
backend/app/core/: commitment_weights.py  config.py  database.py  otp.py  security.py
backend/app/data/: municipal_layers.py
backend/app/models/: __init__.py  commitments.py  complaints.py  constituency.py  rag_facts.py  user.py
backend/app/schemas/: auth.py  commitments.py  complaint_analysis.py  complaints.py  constituency.py  dashboard.py  digest.py  leader_ai.py  priorities.py  voice.py
backend/app/services/: complaint_explore.py  complaint_text_analysis.py  dialogflow_speech.py  leader_ai.py  ward_geo.py
backend/data/: .gitkeep
backend/scripts/: fix_ward_city.py  seed_demo_data.py  sync_bhopal_ward_boundaries.py  sync_municipal_wards.py
backend/tests/: test_auth.py  test_commitments.py  test_complaints.py  test_constituency_dashboard.py  test_health.py  test_models.py  test_priorities_digest.py  test_seed_demo_data.py  test_ward_geo.py
(+233 files in other folders)
