[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jankendra-ai"
version = "0.1.0"
description = "AI-powered constituency intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "google-auth>=2.29.0",
    "google-cloud-aiplatform>=1.60.0",
    "pydantic-settings",
    "uvicorn[standard]",
]

[project.optional-dependencies]
test = ["httpx", "pytest"]

[tool.setuptools.packages.find]
include = ["ai_modules*"]

[tool.pytest.ini_options]
testpaths = ["ai_modules/tests"]
pythonpath = ["."]
